--- a/Ansible/artifactory7/hosts.yml
+++ b/Ansible/artifactory7/hosts.yml
@@ -18,8 +18,17 @@ all:
                 db_driver: "org.postgresql.Driver"
                 db_url: "jdbc:postgresql://10.0.0.70:5432/artifactory"
                 server_name: "some-server.com"
-                certificate: xxxxx
-                certificate_key: xxxxx
+                certificate: |
+                    -----BEGIN CERTIFICATE-----
+					Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0X
+					Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0X
+                    -----END CERTIFICATE-----
+
+                certificate_key: |
+                    -----BEGIN RSA PRIVATE KEY-----
+					Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0X
+					Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0Xx0X
+                    -----END RSA PRIVATE KEY-----
             children:
                 primary:
                     hosts:
@@ -37,8 +46,3 @@ all:
                         18.208.198.226:
                     vars:
                         artifactory_is_primary: false
-
-
-
-
-
