openshift artifactory ha updates to v7.4.1 and openshift xray v3.2.3 helm charts

--- a/Openshift4/.gitignore
+++ b/Openshift4/.gitignore
@@ -1,6 +1,6 @@
 artifactory.cluster.license
-jfrog.team.crt
-jfrog.team.key
+tls.crt
+tls.key
 artifactory-ha-operator/helm-charts/openshift-artifactory-ha
 *.tar.gz
 *.tgz
