--- a/Openshift4/openshift-artifactory-ha/values.yaml
+++ b/Openshift4/openshift-artifactory-ha/values.yaml
@@ -33,13 +33,16 @@ artifactory-ha:
             name: volume
     ## Change to use RH UBI images
     image:
-      repository: registry.connect.redhat.com/jfrog/artifactory-pro
-      version: 7.3.2
+      repository: quay.io/jfrog/artifactory-rh-pro
+      version: 7.4.1
+      #repository: registry.connect.redhat.com/jfrog/artifactory-pro
+      #version: 7.3.2
     node:
       replicaCount: 2
       waitForPrimaryStartup:
         enabled: false
     masterKey: FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+    joinKey: EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
   postgresql:
     enabled: false
   nginx:
@@ -48,6 +51,8 @@ artifactory-ha:
       version: latest
     ## K8S secret name for the TLS secret to be used for SSL
     tlsSecretName: "OVERRIDE"
+    service:
+      ssloffload: false
     http:
       externalPort: 80
       internalPort: 8080
