Added nginx roles.

--- a/Ansible/artifactory7/jfrog/rt7ansible/roles/artifactory-java/tasks/setup-Debian.yml
+++ b/Ansible/artifactory7/jfrog/rt7ansible/roles/artifactory-java/tasks/setup-Debian.yml
@@ -12,6 +12,7 @@
 
 - name: Ensure Java is installed.
   apt:
+    update_cache: yes
     name: "{{ java_packages }}"
     state: present
   become: true
