--- a/Ansible/artifactory7/jfrog/rt7ansible/roles/artifactory/tasks/main.yml
+++ b/Ansible/artifactory7/jfrog/rt7ansible/roles/artifactory/tasks/main.yml
@@ -4,60 +4,9 @@
   include_role:
     name: artifactory-java
 
-#- name: install nginx
-#  package:
-#    name: nginx
-#    state: present
-#  become: true
-#
-#- name: configure main nginx conf file.
-#  copy:
-#    src: nginx.conf
-#    dest: /etc/nginx/nginx.conf
-#    owner: root
-#    group: root
-#    mode: '0755'
-#  become: true
-#
-#- name: configure the artifactory nginx conf
-#  template:
-#    src: artifactory.conf.j2
-#    dest: /etc/nginx/conf.d/artifactory.conf
-#    owner: root
-#    group: root
-#    mode: '0755'
-#  become: true
-#
-#- name: ensure nginx dir exists
-#  file:
-#    path: "/var/opt/jfrog/nginx/ssl"
-#    state: directory
-#  become: true
-#
-#- name: configure certificate
-#  template:
-#    src: certificate.pem.j2
-#    dest: "/var/opt/jfrog/nginx/ssl/cert.pem"
-#  become: true
-#
-#- name: ensure pki exists
-#  file:
-#    path: "/etc/pki/tls"
-#    state: directory
-#  become: true
-#
-#- name: configure key
-#  template:
-#    src: certificate.key.j2
-#    dest: "/etc/pki/tls/cert.key"
-#  become: true
-#
-#- name: restart nginx
-#  service:
-#    name: nginx
-#    state: started
-#    enabled: yes
-#  become: true
+- name: install nginx
+  include_role:
+    name: artifactory-nginx
 
 - name: create group for artifactory
   group:
