updating openshift artifactory-ha to latest artifactoryha helm chart 2.4.6

--- a/Openshift4/openshift-artifactory-ha/values.yaml
+++ b/Openshift4/openshift-artifactory-ha/values.yaml
@@ -33,10 +33,8 @@ artifactory-ha:
             name: volume
     ## Change to use RH UBI images
     image:
-      repository: quay.io/jfrog/artifactory-rh-pro
-      version: 7.4.1
-      #repository: registry.connect.redhat.com/jfrog/artifactory-pro
-      #version: 7.3.2
+      repository: registry.connect.redhat.com/jfrog/artifactory-pro
+      version: 7.4.3
     node:
       replicaCount: 2
       waitForPrimaryStartup:
