--- a/Openshift4/xray-operator/helm-charts/openshift-xray/Chart.yaml
+++ b/Openshift4/xray-operator/helm-charts/openshift-xray/Chart.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 appVersion: 3.3.0
-description: Universal component scan for security and license inventory and impact analysis
-sources:
-- https://bintray.com/jfrog/product/xray/view
-- https://github.com/jfrog/charts
+description: Universal component scan for security and license inventory and impact
+  analysis
 keywords:
 - xray
 - jfrog
@@ -13,4 +11,7 @@ maintainers:
 - email: johnp@jfrog.com
   name: John Peterson
 name: openshift-xray
+sources:
+- https://bintray.com/jfrog/product/xray/view
+- https://github.com/jfrog/charts
 version: 3.3.1
