--- a/Ansible/project/rt-xray-ha/playbook.yml
+++ b/Ansible/project/rt-xray-ha/playbook.yml
@@ -1,15 +1,12 @@
 ---
 - hosts: database
-  gather_facts: true
   roles:
-    - jfrog/ansible/roles/postgres
+    - postgres
 
 - hosts: primary
-  gather_facts: true
   roles:
-    - jfrog/ansible/roles/artifactory
+    - artifactory
 
 - hosts: xray
-  gather_facts: true
   roles:
-    - jfrog/ansible/roles/xray
+    - xray
