--- a/Ansible/project/rt/playbook.yml
+++ b/Ansible/project/rt/playbook.yml
@@ -1,10 +1,8 @@
 ---
 - hosts: database
-  gather_facts: true
   roles:
-    - jfrog/ansible/roles/postgres
+    - postgres
 
 - hosts: primary
-  gather_facts: true
   roles:
-    - jfrog/ansible/roles/artifactory
+    - artifactory
