--- a/Ansible/collection/jfrog/ansible/roles/artifactory/tasks/main.yml
+++ b/Ansible/collection/jfrog/ansible/roles/artifactory/tasks/main.yml
@@ -52,11 +52,19 @@
     group: "{{ artifactory_group }}"
   become: yes
 
+- name: use specified system yaml
+  copy:
+    src: "{{ system_file }}"
+    dest: "{{ artifactory_home }}/var/etc/system.yaml"
+  become: yes
+  when: system_file is defined
+
 - name: configure system yaml
   template:
     src: system.yaml.j2
     dest: "{{ artifactory_home }}/var/etc/system.yaml"
   become: yes
+  when: system_file is not defined
 
 - name: ensure {{ artifactory_home }}/var/etc/security/ exists
   file:
@@ -92,18 +100,33 @@
     dest: "{{ artifactory_home }}/var/etc/info/installer-info.json"
   become: yes
 
-- name: configure binary store
+- name: use specified binary store
+  copy:
+    src: "{{ binary_store_file }}"
+    dest: "{{ artifactory_home }}/var/etc/binarystore.xml"
+  become: yes
+  when: binary_store_file is defined
+
+- name: use default binary store
   template:
     src: binarystore.xml.j2
     dest: "{{ artifactory_home }}/var/etc/binarystore.xml"
   become: yes
+  when: binary_store_file is not defined
 
-- name: configure cluster license
+- name: use license file
+  copy:
+    src: "{{ artifactory_license_file }}"
+    dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.cluster.license"
+  become: yes
+  when: artifactory_license_file is defined and artifactory_is_primary == true
+
+- name: use license strings
   template:
     src: artifactory.cluster.license.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.cluster.license"
   become: yes
-  when: artifactory_is_primary == true
+  when: artifactory_license_file is not defined and artifactory_is_primary == true
 
 - name: download database driver
   get_url:
