--- a/Ansible/project/rt/hosts.yml
+++ b/Ansible/project/rt/hosts.yml
@@ -2,30 +2,23 @@
 all:
     vars:
         ansible_user: "ubuntu"
-        ansible_ssh_private_key_file: "/Users/jefff/.ssh/ansible-priv.pem"
     children:
         database:
             hosts:
-                52.86.32.79:
+                54.83.163.100:
                     db_users:
-                        - { db_user: "artifactory", db_password: "Art1fAct0ry" }
+                        - { db_user: "artifactory", db_password: "{{ lookup('env', 'artifactory_password') }}" }
                     dbs:
                         - { db_name: "artifactory", db_owner: "artifactory" }
         primary:
             hosts:
-                100.25.104.198:
+                54.165.47.191:
                     artifactory_is_primary: true
-                    artifactory_license1: x
-                    artifactory_license2: x
-                    artifactory_license3: x
-                    artifactory_license4: x
-                    artifactory_license5: x
-                    master_key: "c97b862469de0d94fbb7d48130637a5a"
-                    join_key: "9bcca98f375c0728d907cc6ee39d4f02"
+                    artifactory_license_file: "{{ lookup('env', 'artifactory_license_file') }}"
                     db_download_url: "https://jdbc.postgresql.org/download/postgresql-42.2.12.jar"
                     db_type: "postgresql"
                     db_driver: "org.postgresql.Driver"
-                    db_url: "jdbc:postgresql://10.0.0.160:5432/artifactory"
+                    db_url: "jdbc:postgresql://10.0.0.219:5432/artifactory"
                     db_user: "artifactory"
-                    db_password: "Art1fAct0ry"
-                    server_name: "ec2-100-25-104-198.compute-1.amazonaws.com"
+                    db_password: "{{ lookup('env', 'artifactory_password') }}"
+                    server_name: "ec2-54-165-47-191.compute-1.amazonaws.com"
