--- a/Ansible/project/ssl/playbook.yml
+++ b/Ansible/project/ssl/playbook.yml
@@ -1,11 +1,9 @@
 ---
 - hosts: database
-  gather_facts: true
   roles:
-    - jfrog/ansible/roles/postgres
+    - postgres
 
 - hosts: primary
-  gather_facts: true
   roles:
-    - jfrog/ansible/roles/artifactory
-    - jfrog/ansible/roles/artifactory-nginx-ssl
+    - artifactory
+    - artifactory-nginx-ssl
