updates to xray operator

--- a/Openshift4/openshift-xray/values.yaml
+++ b/Openshift4/openshift-xray/values.yaml
@@ -1,5 +1,6 @@
 # Openshift Jfrog Xray
 xray:
+  unifiedUpgradeAllowed: true
   replicaCount: 1
   xray:
     masterKey: FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
