Updated READMEs. Fixed Centos nginx install. Changed directory structure.

--- a/Ansible/collection/jfrog/ansible/roles/artifactory-nginx/tasks/main.yml
+++ b/Ansible/collection/jfrog/ansible/roles/artifactory-nginx/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: perform dependency installation
+  include_tasks: "{{ ansible_os_family }}.yml"
+
 - name: install nginx
   package:
     name: nginx
