--- a/Ansible/examples/host_vars/rt-ha/hosts.yml
+++ b/Ansible/examples/host_vars/rt-ha/hosts.yml
@@ -8,48 +8,45 @@ all:
             hosts:
                 #artifactory database
                 52.86.32.79:
-                    dbs:
-                        - { db_name: "artifactory", db_owner: "artifactory" }
                     db_users:
                         - { db_user: "artifactory", db_password: "Art1fAct0ry" }
-                #xray database
-                100.25.152.93:
                     dbs:
-                        - { db_name: "xraydb", db_owner: "xray" }
-                    db_users:
-                        - { db_user: "xray", db_password: "xray" }
+                        - { db_name: "artifactory", db_owner: "artifactory" }
         artifactory:
             vars:
+                artifactory_version: 7.4.1
                 artifactory_ha_enabled: true
                 master_key: "c97b862469de0d94fbb7d48130637a5a"
                 join_key: "9bcca98f375c0728d907cc6ee39d4f02"
                 db_download_url: "https://jdbc.postgresql.org/download/postgresql-42.2.12.jar"
                 db_type: "postgresql"
                 db_driver: "org.postgresql.Driver"
-                db_url: "jdbc:postgresql://10.0.0.51:5432/artifactory"
+                db_url: "jdbc:postgresql://10.0.0.160:5432/artifactory"
                 db_user: "artifactory"
                 db_password: "Art1fAct0ry"
-                server_name: "ec2-18-210-33-94.compute-1.amazonaws.com"
+                server_name: "ec2-100-25-104-198.compute-1.amazonaws.com"
+                certificate: |
+                    -----BEGIN CERTIFICATE-----
+                    x
+                    -----END CERTIFICATE-----
+                certificate_key: |
+                    -----BEGIN PRIVATE KEY-----
+                    x
+                    -----END PRIVATE KEY-----
             children:
                 primary:
                     hosts:
-                        18.210.33.94:
+                        100.25.104.198:
                             artifactory_is_primary: true
                             artifactory_license1: x
                             artifactory_license2: x
                             artifactory_license3: x
                             artifactory_license4: x
                             artifactory_license5: x
-        xray:
-            vars:
-                jfrog_url: http://ec2-18-210-33-94.compute-1.amazonaws.com
-                master_key: "c97b862469de0d94fbb7d48130637a5a"
-                join_key: "9bcca98f375c0728d907cc6ee39d4f02"
-                db_type: "postgresql"
-                db_driver: "org.postgresql.Driver"
-                db_url: "postgres://10.0.0.5:5432/xraydb?sslmode=disable"
-                db_user: "xray"
-                db_password: "xray"
-            hosts:
-#                34.229.56.166:
-                54.237.68.180
+                secondary:
+                    hosts:
+                        54.160.107.157:
+                        35.153.79.44:
+                    vars:
+                        artifactory_is_primary: false
+
