--- a/Ansible/examples/host_vars/rt-xray/hosts.yml
+++ b/Ansible/examples/host_vars/rt-xray/hosts.yml
@@ -3,7 +3,6 @@ all:
     vars:
         ansible_user: "ubuntu"
         ansible_ssh_private_key_file: "/Users/jefff/.ssh/ansible-priv.pem"
-        ansible_ssh_common_args: '-o ProxyCommand="ssh -o StrictHostKeyChecking=no -A ubuntu@13.82.225.20 -W %h:%p"'
     children:
         database:
             hosts:
@@ -17,11 +16,14 @@ all:
         artifactory:
             hosts:
                 54.237.207.135:
+                    artifactory_version: 7.4.1
                     artifactory_license1: x
                     artifactory_license2: x
                     artifactory_license3: x
                     artifactory_license4: x
                     artifactory_license5: x
+                    master_key: "c97b862469de0d94fbb7d48130637a5a"
+                    join_key: "9bcca98f375c0728d907cc6ee39d4f02"
                     db_download_url: "https://jdbc.postgresql.org/download/postgresql-42.2.12.jar"
                     db_type: "postgresql"
                     db_driver: "org.postgresql.Driver"
@@ -32,7 +34,10 @@ all:
         xray:
             hosts:
                 100.25.104.174:
+                    xray_version: 3.3.0
                     jfrog_url: "http://ec2-54-237-207-135.compute-1.amazonaws.com"
+                    master_key: "c97b862469de0d94fbb7d48130637a5a"
+                    join_key: "9bcca98f375c0728d907cc6ee39d4f02"
                     db_type: "postgresql"
                     db_driver: "org.postgresql.Driver"
                     db_url: "postgres://10.0.0.59:5432/xraydb?sslmode=disable"
