--- a/Ansible/examples/host_vars/ssl/hosts.yml
+++ b/Ansible/examples/host_vars/ssl/hosts.yml
@@ -14,6 +14,7 @@ all:
         primary:
             hosts:
                 100.25.104.198:
+                    artifactory_version: 7.4.1
                     artifactory_is_primary: true
                     artifactory_license1: x
                     artifactory_license2: x
