--- a/Ansible/examples/host_vars/xray/hosts.yml
+++ b/Ansible/examples/host_vars/xray/hosts.yml
@@ -5,6 +5,7 @@ all:
     children:
         xray:
             vars:
+                xray_version: 3.3.0
                 jfrog_url: http://ec2-18-210-33-94.compute-1.amazonaws.com
                 master_key: "c97b862469de0d94fbb7d48130637a5a"
                 join_key: "9bcca98f375c0728d907cc6ee39d4f02"
