--- a/Ansible/test/aws/playbook.yaml
+++ b/Ansible/test/aws/playbook.yaml
@@ -33,6 +33,7 @@
       hostname: "{{ AWSDeployment.stack_outputs.RTPriInstancePrivate }}"
       ansible_user: "ubuntu"
       ansible_ssh_common_args: '-o ProxyCommand="ssh -o StrictHostKeyChecking=no -A ubuntu@{{ AWSDeployment.stack_outputs.BastionInstancePublic }} -W %h:%p"'
+      artifactory_version: "{{ lookup('env', 'artifactory_version') }}"
       db_url: "jdbc:postgresql://{{ AWSDeployment.stack_outputs.DBInstancePrivate }}:5432/artifactory"
       server_name: "{{ AWSDeployment.stack_outputs.ALBHostName }}"
       artifactory_is_primary: true
@@ -47,6 +48,7 @@
       hostname: "{{ AWSDeployment.stack_outputs.RTSecInstancePrivate }}"
       ansible_user: "ubuntu"
       ansible_ssh_common_args: '-o ProxyCommand="ssh -o StrictHostKeyChecking=no -A ubuntu@{{ AWSDeployment.stack_outputs.BastionInstancePublic }} -W %h:%p"'
+      artifactory_version: "{{ lookup('env', 'artifactory_version') }}"
       db_url: "jdbc:postgresql://{{ AWSDeployment.stack_outputs.DBInstancePrivate }}:5432/artifactory"
       server_name: "{{ AWSDeployment.stack_outputs.ALBHostName }}"
       artifactory_is_primary: false
@@ -58,6 +60,7 @@
       hostname: "{{ AWSDeployment.stack_outputs.XrayInstancePrivate }}"
       ansible_user: "ubuntu"
       ansible_ssh_common_args: '-o ProxyCommand="ssh -o StrictHostKeyChecking=no -A ubuntu@{{ AWSDeployment.stack_outputs.BastionInstancePublic }} -W %h:%p"'
+      xray_version: "{{ lookup('env', 'xray_version') }}"
       jfrog_url: "http://{{ AWSDeployment.stack_outputs.ALBHostName }}"
       master_key: "{{ lookup('env', 'master_key') }}"
       join_key: "{{ lookup('env', 'join_key') }}"
