--- a/Ansible/examples/host_vars/rt/hosts.yml
+++ b/Ansible/examples/host_vars/rt/hosts.yml
@@ -13,6 +13,7 @@ all:
         primary:
             hosts:
                 54.165.47.191:
+                    artifactory_version: 7.4.1
                     artifactory_is_primary: true
                     artifactory_license_file: "{{ lookup('env', 'artifactory_license_file') }}"
                     db_download_url: "https://jdbc.postgresql.org/download/postgresql-42.2.12.jar"
