--- a/Ansible/collection/jfrog/ansible/roles/artifactory_nginx_ssl/meta/main.yml
+++ b/Ansible/collection/jfrog/ansible/roles/artifactory_nginx_ssl/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: "Jeff Fry <jefff@jfrog.com>"
-  description: "The xray role will install Xray software onto the host. An Artifactory server and Postgress database is required."
+  description: "The artifactory_nginx_ssl role installs and configures nginx for SSL."
   company: JFrog
 
   issue_tracker_url: "https://github.com/jfrog/JFrog-Cloud-Installers/issues"
@@ -10,7 +10,7 @@ galaxy_info:
   min_ansible_version: 2.9
 
   galaxy_tags:
-    - xray
+    - artifactory
     - jfrog
 
 dependencies: []
