--- a/Ansible/collection/jfrog/ansible/roles/postgres/meta/main.yml
+++ b/Ansible/collection/jfrog/ansible/roles/postgres/meta/main.yml
@@ -1,25 +1,16 @@
----
-
 galaxy_info:
-  role_name: postgres_server
-  author: Jeff Fry
-  description: Installation of Postgres for Artifactory HA
+  author: "Jeff Fry <jefff@jfrog.com>"
+  description: "The postgres role will install Postgresql software and configure a database and user to support an Artifactory or Xray server."
   company: JFrog
-  min_ansible_version: 2.8
-  platforms:
-    - name: Fedora
-      versions:
-        - 27
-        - 29
-    - name: Ubuntu
-      versions:
-        - xenial
-        - bionic
-    - name: Debian
-      versions:
-        - stretch
+
+  issue_tracker_url: "https://github.com/jfrog/JFrog-Cloud-Installers/issues"
+
+  license: license (GPL-2.0-or-later)
+
+  min_ansible_version: 2.9
+
   galaxy_tags:
     - postgres
-    - postgresql
+    - jfrog
 
 dependencies: []
