Documentation updates. Fixes AWS test/playbook.

--- a/Ansible/examples/playbook-rt-ha.yml
+++ b/Ansible/examples/playbook-rt-ha.yml
@@ -1,9 +1,13 @@
 ---
 - hosts: database
+  collections:
+    - jfrog.installers
   roles:
     - postgres
 
 - hosts: primary:secondary
+  collections:
+    - jfrog.installers
   roles:
     - artifactory
     - artifactory_nginx_ssl
