--- a/Ansible/ansible_collections/jfrog/installers/galaxy.yml
+++ b/Ansible/ansible_collections/jfrog/installers/galaxy.yml
@@ -9,7 +9,7 @@ namespace: "jfrog"
 name: "installers"
 
 # The version of the collection. Must be compatible with semantic versioning
-version: "1.0.5"
+version: "1.0.6"
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: "README.md"
@@ -52,9 +52,7 @@ dependencies: {}
 repository: "https://github.com/jfrog/JFrog-Cloud-Installers/"
 
 # The URL to any online docs
-documentation:
-  - "https://github.com/jfrog/JFrog-Cloud-Installers/blob/master/Ansible/README.md"
-  - "https://www.jfrog.com/confluence/display/JFROG/"
+documentation: "https://github.com/jfrog/JFrog-Cloud-Installers/blob/master/Ansible/README.md"
 
 # The URL to the homepage of the collection/project
 homepage: "https://github.com/jfrog/JFrog-Cloud-Installers/"
