--- a/Ansible/examples/playbook-rt.yml
+++ b/Ansible/examples/playbook-rt.yml
@@ -1,8 +1,12 @@
 ---
 - hosts: database
+  collections:
+    - jfrog.installers
   roles:
     - postgres
 
 - hosts: primary
+  collections:
+    - jfrog.installers
   roles:
     - artifactory
