--- a/Ansible/test/aws/playbook.yaml
+++ b/Ansible/test/aws/playbook.yaml
@@ -37,7 +37,9 @@
       db_url: "jdbc:postgresql://{{ AWSDeployment.stack_outputs.DBInstancePrivate }}:5432/artifactory"
       server_name: "{{ AWSDeployment.stack_outputs.ALBHostName }}"
       artifactory_is_primary: true
-      artifactory_license_file: "{{ lookup('env', 'artifactory_license_file') }}"
+      artifactory_license1: "{{ lookup('env', 'artifactory_license1') }}"
+      artifactory_license2: "{{ lookup('env', 'artifactory_license2') }}"
+      artifactory_license3: "{{ lookup('env', 'artifactory_license3') }}"
       groups:
       - artifactory
 
