--- a/Ansible/ansible_collections/jfrog/installers/roles/artifactory/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/installers/roles/artifactory/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for artifactory
 # indicates were this collection was downlaoded from (galaxy, automation_hub, standalone)
-ansible_marketplace: standalone
+ansible_marketplace: galaxy
 
 # The version of Artifactory to install
 artifactory_version: 7.6.1
